// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`APM API tests basic apm_8.0.0 Error groups detailed statistics when data is loaded returns the correct data 1`] = `
Object {
  "groupId": "118a77334ca0cee8d7b05a534ed61a65",
  "timeseries": Array [
    Object {
      "x": 1627321620000,
      "y": 0,
    },
    Object {
      "x": 1627321680000,
      "y": 0,
    },
    Object {
      "x": 1627321740000,
      "y": 0,
    },
    Object {
      "x": 1627321800000,
      "y": 0,
    },
    Object {
      "x": 1627321860000,
      "y": 0,
    },
    Object {
      "x": 1627321920000,
      "y": 0,
    },
    Object {
      "x": 1627321980000,
      "y": 0,
    },
    Object {
      "x": 1627322040000,
      "y": 0,
    },
    Object {
      "x": 1627322100000,
      "y": 0,
    },
    Object {
      "x": 1627322160000,
      "y": 0,
    },
    Object {
      "x": 1627322220000,
      "y": 0,
    },
    Object {
      "x": 1627322280000,
      "y": 0,
    },
    Object {
      "x": 1627322340000,
      "y": 0,
    },
    Object {
      "x": 1627322400000,
      "y": 0,
    },
    Object {
      "x": 1627322460000,
      "y": 0,
    },
    Object {
      "x": 1627322520000,
      "y": 0,
    },
    Object {
      "x": 1627322580000,
      "y": 0,
    },
    Object {
      "x": 1627322640000,
      "y": 0,
    },
    Object {
      "x": 1627322700000,
      "y": 0,
    },
    Object {
      "x": 1627322760000,
      "y": 0,
    },
    Object {
      "x": 1627322820000,
      "y": 0,
    },
    Object {
      "x": 1627322880000,
      "y": 0,
    },
    Object {
      "x": 1627322940000,
      "y": 0,
    },
    Object {
      "x": 1627323000000,
      "y": 0,
    },
    Object {
      "x": 1627323060000,
      "y": 0,
    },
    Object {
      "x": 1627323120000,
      "y": 1,
    },
    Object {
      "x": 1627323180000,
      "y": 0,
    },
    Object {
      "x": 1627323240000,
      "y": 0,
    },
    Object {
      "x": 1627323300000,
      "y": 0,
    },
    Object {
      "x": 1627323360000,
      "y": 0,
    },
    Object {
      "x": 1627323420000,
      "y": 0,
    },
  ],
}
`;

exports[`APM API tests basic apm_8.0.0 Error groups detailed statistics when data is loaded with previous data returns the correct data returns correct timeseries 1`] = `
Object {
  "groupId": "118a77334ca0cee8d7b05a534ed61a65",
  "timeseries": Array [
    Object {
      "x": 1627322520000,
      "y": 0,
    },
    Object {
      "x": 1627322580000,
      "y": 0,
    },
    Object {
      "x": 1627322640000,
      "y": 0,
    },
    Object {
      "x": 1627322700000,
      "y": 0,
    },
    Object {
      "x": 1627322760000,
      "y": 0,
    },
    Object {
      "x": 1627322820000,
      "y": 0,
    },
    Object {
      "x": 1627322880000,
      "y": 0,
    },
    Object {
      "x": 1627322940000,
      "y": 0,
    },
    Object {
      "x": 1627323000000,
      "y": 0,
    },
    Object {
      "x": 1627323060000,
      "y": 0,
    },
    Object {
      "x": 1627323120000,
      "y": 1,
    },
    Object {
      "x": 1627323180000,
      "y": 0,
    },
    Object {
      "x": 1627323240000,
      "y": 0,
    },
    Object {
      "x": 1627323300000,
      "y": 0,
    },
    Object {
      "x": 1627323360000,
      "y": 0,
    },
    Object {
      "x": 1627323420000,
      "y": 0,
    },
  ],
}
`;
